--- a/pages/qml.qrc
+++ b/pages/qml.qrc
@@ -1,5 +1,11 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/EncryptPage.qml</file>
+        <file>qml/DecryptPage.qml</file>
+        <file>qml/HomeForm.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/MainPage.qml</file>
+        <file>qml/Page1Form.ui.qml</file>
+        <file>qml/Page2Form.ui.qml</file>
     </qresource>
 </RCC>
